@@ -2,6 +2,7 @@
 v4.2.2-git
 ----------
 
+[jan] Fix sidebar display of system task lists in basic view.
 [jan] Fix retrieving individual tasks via WebDAV.
 
 
